[package]
name = "vinx"
version = "0.1.0"
authors = ["Revertron <vinx@revertron.com>"]

[dependencies]
quick-xml = "0.27.1"
downcast-rs = "1.2.0"
speedy2d = "1.10.0"
rand = "0.8.5"

[dev-dependencies]
include_dir = "0.7"

[profile.release]
opt-level = 3
lto = true
strip = true  # Automatically strip symbols from the binary.